--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,3 +1,7 @@
+// body {
+//     background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,167,197,0.4) 100%);
+//     background-attachment: fixed;
+// }
 #app {
     // font-family: 'Avenir', Helvetica, Arial, sans-serif;
     font-family: 'Overpass', sans-serif;
